# JaneStreetPuzzles

./: .gitignore.txt  LICENSE  README.md
AlteredStates2/AlteredStates2/data/: state_populations.json
AlteredStates2/data/: state_populations.json
AlteredStates2/src/: dqn_agent.py  environment.py  main.py  trie.py
AlteredStates5/: .gitignore
AlteredStates6/: README.md
AlteredStates6/src/: environment.py
Hooks10/: .gitignore  CMakeLists.txt  Grid.cpp  Grid.h  Hook.h  main.cpp  test_main.cpp
MirrorsTest/: CMakeLists.txt
MirrorsTest/tests/: test_main.cpp
NumberCross4/: CMakeLists.txt  grid.cpp  grid.h  main.cpp  test_main.cpp
SomeFSquares/: CMakeLists.txt  Grid.cpp  Grid.h  Pentomino.cpp  Pentomino.h  main.cpp  test_main.cpp
SomeOffSquare/: CMakeLists.txt  simulator.cpp
Tree-edgeTriage/: CMakeLists.txt  Tree.h  main.cpp
hallofmirrors/: CMakeLists.txt  Pixels.cpp  Pixels.h  Reflection.cpp  Reflection.h  main.cpp
